istio-testing/iptables-init-logs.txt
# Another way to inspect iptable rules is viewing the istio-init logs
kubectl logs whereami-758fc65995-62spk -n testing -c istio-init

# If you are using Istio CNI, the istio-validation pod doesn't have any details
k logs whereami-758fc65995-62spk -n testing -c istio-validation
2022-06-14T00:53:31.876124Z	info	in new validator: 10.1.5.96
2022-06-14T00:53:31.876200Z	info	Listening on 127.0.0.1:15001
2022-06-14T00:53:31.876459Z	info	Listening on 127.0.0.1:15006
2022-06-14T00:53:31.876773Z	info	Local addr 127.0.0.1:15006
2022-06-14T00:53:31.876809Z	info	Original addr 127.0.0.1: 15002
2022-06-14T00:53:31.876882Z	info	Validation passed

# Instead the logs will be in the istio-cni-node daemonset pod
kubectl describe node gke-gke-central-linux-gke-toolkit-poo-a82957ba-hl37
kubectl logs istio-cni-node-zkh7n -n kube-system



# Example output (using CNI pod but istio-init is similar)
2022-06-13T23:33:21.781501Z	info	cni	============= End iptables configuration for whereami-56f9597df5-pxcg6 =============
2022-06-14T00:14:11.190186Z	info	cni	istio-cni cmdAdd with k8s args: {CommonArgs:{IgnoreUnknown:true} IP:<nil> K8S_POD_NAME:echo9900 K8S_POD_NAMESPACE:istio-system K8S_POD_INFRA_CONTAINER_ID:ab7df181a8063535d88b5e881fae960b4313f06ed5569e1ab9d8f803539cb4d4}
2022-06-14T00:14:11.190222Z	info	cni	Pod istio-system/echo9900 excluded
2022-06-14T00:53:31.631702Z	info	cni	istio-cni cmdAdd with k8s args: {CommonArgs:{IgnoreUnknown:true} IP:<nil> K8S_POD_NAME:whereami-758fc65995-62spk K8S_POD_NAMESPACE:testing K8S_POD_INFRA_CONTAINER_ID:b1167a1c2d319924dafa2ade142f8f073db83081960446bfc4600f7755477549}
2022-06-14T00:53:31.631742Z	info	cni	============= Start iptables configuration for whereami-758fc65995-62spk =============
2022-06-14T00:53:31.631750Z	info	cni	Istio iptables environment:
ENVOY_PORT=
INBOUND_CAPTURE_PORT=
ISTIO_INBOUND_INTERCEPTION_MODE=
ISTIO_INBOUND_TPROXY_ROUTE_TABLE=
ISTIO_INBOUND_PORTS=
ISTIO_OUTBOUND_PORTS=
ISTIO_LOCAL_EXCLUDE_PORTS=
ISTIO_EXCLUDE_INTERFACES=
ISTIO_SERVICE_CIDR=
ISTIO_SERVICE_EXCLUDE_CIDR=
ISTIO_META_DNS_CAPTURE=
INVALID_DROP=
2022-06-14T00:53:31.631755Z	info	cni	Istio iptables variables:
PROXY_PORT=15001
PROXY_INBOUND_CAPTURE_PORT=15006
PROXY_TUNNEL_PORT=15008
PROXY_UID=1337
PROXY_GID=1337
INBOUND_INTERCEPTION_MODE=REDIRECT
INBOUND_TPROXY_MARK=1337
INBOUND_TPROXY_ROUTE_TABLE=133
INBOUND_PORTS_INCLUDE=*
INBOUND_PORTS_EXCLUDE=1234,15020,15021,15090
OUTBOUND_IP_RANGES_INCLUDE=*
OUTBOUND_IP_RANGES_EXCLUDE=
OUTBOUND_PORTS_INCLUDE=9090
OUTBOUND_PORTS_EXCLUDE=9900,9999
KUBE_VIRT_INTERFACES=
ENABLE_INBOUND_IPV6=false
DNS_CAPTURE=false
DROP_INVALID=false
CAPTURE_ALL_DNS=false
DNS_SERVERS=[],[]
OUTPUT_PATH=
NETWORK_NAMESPACE=/proc/194050/ns/net
CNI_MODE=true
EXCLUDE_INTERFACES=
2022-06-14T00:53:31.631771Z	info	cni	Writing following contents to rules file: /tmp/iptables-rules-1655168011519336976.txt431505573
* nat
-N ISTIO_INBOUND
-N ISTIO_REDIRECT
-N ISTIO_IN_REDIRECT
-N ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A ISTIO_INBOUND -p tcp --dport 1234 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_OUTPUT -p tcp --dport 9900 -j RETURN
-A ISTIO_OUTPUT -p tcp --dport 9999 -j RETURN
-A ISTIO_OUTPUT -o lo -s 127.0.0.6/32 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d 127.0.0.1/32 -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d 127.0.0.1/32 -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d 127.0.0.1/32 -j RETURN
-A ISTIO_OUTPUT -p tcp --dport 9090 -j ISTIO_REDIRECT
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT
2022-06-14T00:53:31.631775Z	info	cni	Running command: nsenter --net=/proc/194050/ns/net -- iptables-restore --noflush /tmp/iptables-rules-1655168011519336976.txt431505573
2022-06-14T00:53:31.631779Z	info	cni	Writing following contents to rules file: /tmp/ip6tables-rules-1655168011522523354.txt577089760
2022-06-14T00:53:31.631782Z	info	cni	Running command: nsenter --net=/proc/194050/ns/net -- ip6tables-restore --noflush /tmp/ip6tables-rules-1655168011522523354.txt577089760
2022-06-14T00:53:31.631785Z	info	cni	Running command: nsenter --net=/proc/194050/ns/net -- iptables-save
2022-06-14T00:53:31.631789Z	info	cni	Command output: 
# Generated by iptables-save v1.8.5 on Tue Jun 14 00:53:31 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ISTIO_INBOUND - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
:ISTIO_REDIRECT - [0:0]
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 1234 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -p tcp -m tcp --dport 9900 -j RETURN
-A ISTIO_OUTPUT -p tcp -m tcp --dport 9999 -j RETURN
-A ISTIO_OUTPUT -s 127.0.0.6/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d 127.0.0.1/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d 127.0.0.1/32 -j RETURN
-A ISTIO_OUTPUT -p tcp -m tcp --dport 9090 -j ISTIO_REDIRECT
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
# Completed on Tue Jun 14 00:53:31 2022
2022-06-14T00:53:31.631797Z	info	cni	Running command: nsenter --net=/proc/194050/ns/net -- /home/kubernetes/bin/istio-cni configure-routes
2022-06-14T00:53:31.631800Z	info	cni	============= End iptables configuration for whereami-758fc65995-62spk =============
